src/gadgets/site-styles/Gadget-site-styles.css
/* ... */
body:not(.ns--1):not(.ns--2) .navbox .mw-collapsible > tbody > tr:first-child > th:last-child > .mw-collapsible-toggle {
    position: absolute;
    right: 1em;
    top: 0;
    float: none;
    margin-left: 0;
}
body:not(.ns--1):not(.ns--2) .navbox .mw-collapsible:not(.mw-collapsed) > tbody > tr:first-child > th:last-child > .mw-collapsible-toggle:last-child {
    position: static;
    float: right;
    margin-right: -3.5em;
} */

/* wikitable 的 caption */
.wikitable.mw-collapsible caption {
    border: 1px solid rgb(170 170 170 / 37%);
    border-bottom-width: 0;
    background-color: rgb(249 249 249);
}

.wikitable.mw-collapsible.mw-collapsed caption {
    border-bottom-width: 1px;
}

/* 分类页同开头的页面的列表不分段 */
.mw-category-group {
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
}

.mw-category-group:nth-child(1):nth-last-child(1),
/* 只有一个列表时 */
.mw-category-group:nth-child(1):nth-last-child(2),
/* 只有两个列表时 */
.mw-category-group:nth-child(2):nth-last-child(1) {
    -webkit-column-break-inside: auto;
    page-break-inside: auto;
    break-inside: auto;
}

/* 关闭默认编辑器上传图片入口 */
#wikieditor-toolbar-file-dialog + .ui-dialog-buttonpane > .ui-dialog-buttonset > .ui-button:last-child {
    display: none;
}

/* 编辑冲突界面排版 */
.mw-explainconflict ~ #editform {
    display: flex;
    flex-direction: column;
}

.mw-explainconflict ~ #editform > * {
    order: 2;
}

.mw-explainconflict ~ #editform > h2,
.mw-explainconflict ~ #editform > h2 ~ * {
    order: 1;
}

.mw-explainconflict ~ #editform > h2 > .mw-headline::after {
    content: "（请滚动查看，可拖动右下角斜线符号调整高度）";
}

.mw-explainconflict ~ #editform > .diff + h2 > .mw-headline::after,
.mw-explainconflict ~ #editform > .diff-container + h2 > .mw-headline::after {
    content: "（由于技术限制，此处为全文版本，请使用 Ctrl+F | ⌘+F 搜索相关差异，可拖动右下角斜线符号调整高度）";
}

:is(html[lang="zh-hant" i], html[lang="zh-hk" i], html[lang="zh-tw" i]) .mw-explainconflict ~ #editform > h2 > .mw-headline::after {
    content: "（請滾動查看，可拖動右下角斜線符號調整高度）";
}

:is(html[lang="zh-hant" i], html[lang="zh-hk" i], html[lang="zh-tw" i]) .mw-explainconflict ~ #editform > :is(.diff, .diff-container) + h2 > .mw-headline::after {
    content: "（由於技術限制，此處為全文版本，請使用 Ctrl+F | ⌘+F 搜索相關差異，可拖動右下角斜線符號調整高度）";
}

.mw-explainconflict ~ #editform > textarea[readonly] {
    height: 20vh;
    width: 100% !important;
    resize: vertical;
}

.mw-explainconflict ~ #editform > .diff-container {
    height: 20vh;
    overflow-y: auto;
    border: 1px solid gray;
    resize: vertical;
}

.mw-explainconflict ~ #editform > .wikiEditor-ui::before {
    content: "编辑框（最新版本）";
    font-size: 1.5em;
    margin: 1em 0 0.25em;
    font-family: serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    line-height: 1.3;
    padding: 0;
    font-weight: 700;
    border-bottom: 1px solid #0074f9;
    color: #000;
    background: none;
    overflow: hidden;
    display: block;
}

:is(html[lang="zh-hant" i], html[lang="zh-hk" i], html[lang="zh-tw" i]) .mw-explainconflict ~ #editform > .wikiEditor-ui::before {
    content: "編輯框（最新修訂）";
}

/* 浮动滚动条 */
body.overlay-scrollbars #bodyContent {
    padding-right: 24px;
}

/* TODO: 暗色模式 暂时直接反转颜色 */
[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch, #topicpath):not(.dark-theme-invert-disabled) {
    /* FIXME: 100% 反色太黑了，所以使用90%，但是这会造成图片的颜色轻微失真 */
    filter: invert(0.9) hue-rotate(198deg);
    color: #222;
}

.dark-theme-invert .dark-theme-invert {
    filter: unset;
}

[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) a:not(.new) {
    --color: #155d33;
}

[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) figure,
[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) img,
[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) iframe,
[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) canvas,
[color-mode="dark"] :is(.dark-theme-invert, .infobox, .moe-infobox, .infotemplatebox, .infoboxSpecial, .ztdh, #powersearch):not(.dark-theme-invert-disabled) div[style*="image"] {
    filter: invert(1) hue-rotate(180deg);
    opacity: 1;
}

[color-mode="dark"] input[type="text"] {
    color: var(--theme-text-color);
}

[color-mode="dark"] :is(.navbox):not(.dark-theme-invert-disabled) {
    --theme-link-color: rgb(51 102 187);

    color: rgb(44 62 80);
    position: relative;
}

[color-mode="dark"] :is(.navbox):not(.dark-theme-invert-disabled)::after {
    content: "";
    position: absolute;
    display: block;
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    background-color: rgb(0 0 0 / 25%);
    user-select: none;
    pointer-events: none;
}

